--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,24 +1,34 @@
 {
   "manifest_version": 3,
   "name": "SpoilerBlocker",
-  "version": "0.01",
+  "version": "1.0",
   "description": "Защищает от спойлеров в интернете",
+
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
+
   "action": {
     "default_popup": "popup.html",
     "default_title": "SpoilerBlocker - защита от спойлеров"
   },
+
   "permissions": ["storage", "activeTab"],
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["content_script.js"],
-      "run_at": "document_end"
+      "run_at": "document_end",
+      "all_frames": true
     }
   ],
-  "host_permissions": ["http://localhost:5000/*"]
+
+  "host_permissions": ["http://localhost:5000/*", "https://localhost:5000/*"],
+
+  "background": {
+    "service_worker": "background.js"
+  }
 }
